fix: refine table of contents styling for improved layout and readability

--- a/docs/src/index.css
+++ b/docs/src/index.css
@@ -169,7 +169,6 @@
   .toc-items {
     border-left: 1px currentColor solid;
     border-bottom-left-radius: .25rem;
-    padding-left: 1ch;
     padding-bottom: 1ch;
     margin-left: .25rem;
   }
